<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#150D0B"
    tools:context=".SignUp">

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="44dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/log" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:layout_constraintEnd_toEndOf="@+id/imageView3"
      app:layout_constraintStart_toStartOf="@+id/imageView3"
      app:layout_constraintTop_toBottomOf="@+id/imageView3"
      app:srcCompat="@drawable/worldcinema" />

  <EditText
      android:id="@+id/editTextTextPersonName3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:width="328dp"
      android:height="242dp"
      android:background="@drawable/border"
      android:ems="10"
      android:hint="@string/Name1"
      android:inputType="textPersonName"
      android:padding="16dp"
      android:textColor="#AFAFAF"
      android:textColorHint="#AFAFAF"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/imageView4" />

  <EditText
      android:id="@+id/editTextTextPersonName4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="328dp"
      android:height="242dp"
      android:background="@drawable/border"
      android:ems="10"
      android:hint="@string/Surname"
      android:inputType="textPersonName"
      android:padding="16dp"
      android:textColor="#AFAFAF"
      android:textColorHint="#AFAFAF"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
      android:layout_marginTop="19dp"/>

  <EditText
      android:id="@+id/editTextTextPersonName5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="328dp"
      android:height="242dp"
      android:background="@drawable/border"
      android:ems="10"
      android:hint="@string/e_mail1"
      android:inputType="textEmailAddress"
      android:padding="16dp"
      android:textColor="#AFAFAF"
      android:textColorHint="#AFAFAF"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
      android:layout_marginTop="19dp"/>

  <EditText
      android:id="@+id/editTextTextPersonName6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="328dp"
      android:height="242dp"
      android:background="@drawable/border"
      android:ems="10"
      android:hint="@string/Password12"
      android:inputType="textPassword"
      android:padding="16dp"
      android:textColor="#AFAFAF"
      android:textColorHint="#AFAFAF"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
      android:layout_marginTop="19dp"/>

  <EditText
      android:id="@+id/editTextTextPersonName7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:width="328dp"
      android:height="242dp"
      android:background="@drawable/border"
      android:ems="10"
      android:hint="@string/repeatPassword"
      android:inputType="textPassword"
      android:padding="16dp"
      android:textColor="#AFAFAF"
      android:textColorHint="#AFAFAF"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
      android:layout_marginTop="19dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>